--- a/CareDirection/CareDirection/Resources/Storyboard/Ingredient.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/Ingredient.storyboard
@@ -8,7 +8,6 @@
     </dependencies>
     <scenes>
         <!--Ingredient DetailVC-->
-
         <scene sceneID="bUi-3c-iqr">
             <objects>
                 <viewController storyboardIdentifier="IngredientDetailVC" modalPresentationStyle="fullScreen" id="BLO-qI-HXl" customClass="IngredientDetailVC" customModule="CareDirection" customModuleProvider="target" sceneMemberID="viewController">
@@ -33,13 +32,11 @@
                                                         <constraint firstAttribute="height" constant="60" id="MAB-Sg-COu"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="18"/>
-
                                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-
                                                 <constraint firstItem="2px-Jw-eGj" firstAttribute="leading" secondItem="bi0-Ko-2gQ" secondAttribute="leading" constant="18" id="5PS-xf-Wxv"/>
                                                 <constraint firstAttribute="bottom" secondItem="2px-Jw-eGj" secondAttribute="bottom" constant="5" id="aHz-Jz-0rw"/>
                                                 <constraint firstItem="2px-Jw-eGj" firstAttribute="top" secondItem="bi0-Ko-2gQ" secondAttribute="top" constant="5" id="vEE-2e-ZoN"/>
@@ -59,6 +56,10 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2Tv-Em-UKp">
                                                     <rect key="frame" x="18" y="0.0" width="339" height="160"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="160" id="Tcs-Dt-ZAO"/>
+                                                        <constraint firstAttribute="width" constant="339" id="uFf-RI-WB3"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
@@ -82,12 +83,10 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7uK-H2-862">
                                                     <rect key="frame" x="18" y="10" width="342" height="60"/>
                                                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Thin" family="Apple SD Gothic Neo" pointSize="17"/>
-
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="7uK-H2-862" secondAttribute="trailing" constant="15" id="873-SS-naS"/>
                                                 <constraint firstItem="7uK-H2-862" firstAttribute="top" secondItem="pdl-Bt-MbM" secondAttribute="top" constant="10" id="8Xp-6A-0jq"/>
@@ -111,13 +110,11 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="97X-Fb-iTZ"/>
                                     <constraint firstAttribute="width" constant="130" id="UeS-Nz-eoH"/>
-
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="14"/>
                                 <state key="normal" title="제품 보러가기">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
-
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="Study"/>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabled" value="YES"/>
@@ -180,7 +177,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mkO-Lh-vCJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-68" y="49.925037481259373"/>
-
         </scene>
     </scenes>
     <resources>
