--- a/CareDirection/CareDirection/Resources/Storyboard/SurveyLifeStyleFouthPoint.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/SurveyLifeStyleFouthPoint.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,13 +15,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="rfJ-Yc-7BO">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="rfJ-Yc-7BO">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rKc-Bu-7N6">
-
                                 <rect key="frame" x="40" y="309" width="114" height="24"/>
-
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="   2회 ~ 3회" image="icUnselected">
@@ -51,9 +49,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="adf-h8-r9J">
-
                                 <rect key="frame" x="40" y="265" width="103" height="24"/>
-
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="   4회 이상" image="icUnselected">
@@ -105,7 +101,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="RlM-sC-1sH">
-                                <rect key="frame" x="141.5" y="581" width="92" height="8"/>
+                                <rect key="frame" x="141.5" y="533" width="92" height="8"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="indicatorUnselected" translatesAutoresizingMaskIntoConstraints="NO" id="aEv-iO-jSb">
                                         <rect key="frame" x="0.0" y="0.0" width="8" height="8"/>
@@ -141,9 +137,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RDR-Ml-1xm">
-
                                 <rect key="frame" x="40" y="353" width="99" height="24"/>
-
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="   1회 이하" image="icUnselected">
@@ -182,7 +176,7 @@
                             <constraint firstItem="cHd-95-GbC" firstAttribute="trailing" secondItem="VnN-Wz-aek" secondAttribute="trailing" constant="18" id="rWk-e8-gO6"/>
                             <constraint firstItem="rfJ-Yc-7BO" firstAttribute="top" secondItem="eUw-gw-K3K" secondAttribute="top" id="rvb-4f-btk"/>
                             <constraint firstItem="rKc-Bu-7N6" firstAttribute="top" secondItem="adf-h8-r9J" secondAttribute="bottom" constant="20" id="sBH-YW-dB1"/>
-                            <constraint firstItem="cHd-95-GbC" firstAttribute="bottom" secondItem="rfJ-Yc-7BO" secondAttribute="bottom" id="ywn-60-RSB"/>
+                            <constraint firstAttribute="bottom" secondItem="rfJ-Yc-7BO" secondAttribute="bottom" id="ywn-60-RSB"/>
                             <constraint firstItem="YIZ-us-c98" firstAttribute="top" secondItem="VnN-Wz-aek" secondAttribute="bottom" constant="12" id="yz3-5E-JeM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cHd-95-GbC"/>
