--- a/CareDirection/CareDirection/Resources/Storyboard/StandardDetail.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/StandardDetail.storyboard
@@ -43,8 +43,8 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstItem="wuD-jd-53I" firstAttribute="top" secondItem="LpK-bh-0eg" secondAttribute="top" constant="35" id="4sC-KA-kHb"/>
                                     <constraint firstItem="KhH-lm-RBW" firstAttribute="top" secondItem="LpK-bh-0eg" secondAttribute="top" constant="31" id="8ur-U9-cv3"/>
+                                    <constraint firstAttribute="height" constant="66" id="CSt-Uc-pqA"/>
                                     <constraint firstAttribute="bottom" secondItem="wuD-jd-53I" secondAttribute="bottom" constant="10" id="Wq4-9L-HL9"/>
                                     <constraint firstAttribute="bottom" secondItem="KhH-lm-RBW" secondAttribute="bottom" constant="7" id="eqz-fU-UQe"/>
                                     <constraint firstItem="KhH-lm-RBW" firstAttribute="leading" secondItem="LpK-bh-0eg" secondAttribute="leading" constant="11" id="fwD-SL-eA5"/>
@@ -271,13 +271,13 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="lineBlue" translatesAutoresizingMaskIntoConstraints="NO" id="5kB-Qi-Lry">
-                                <rect key="frame" x="62.5" y="236" width="312.5" height="2"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lineBlue" translatesAutoresizingMaskIntoConstraints="NO" id="5kB-Qi-Lry">
+                                <rect key="frame" x="63.5" y="236" width="311.5" height="2"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="5kB-Qi-Lry" secondAttribute="height" multiplier="156:1" id="DtD-6G-Nu2"/>
                                 </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="lineRed" translatesAutoresizingMaskIntoConstraints="NO" id="GKT-Go-Z35">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lineRed" translatesAutoresizingMaskIntoConstraints="NO" id="GKT-Go-Z35">
                                 <rect key="frame" x="59.5" y="126" width="311.5" height="2"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="GKT-Go-Z35" secondAttribute="height" multiplier="156:1" id="owg-bu-wNq"/>
@@ -294,15 +294,14 @@
                             <constraint firstItem="VEn-1C-2nV" firstAttribute="leading" secondItem="JQR-gb-VDU" secondAttribute="trailing" constant="8" id="KXf-SF-1Jq"/>
                             <constraint firstItem="0gp-Qa-O4p" firstAttribute="bottom" secondItem="p1Z-fb-6Yd" secondAttribute="bottom" id="L3h-HQ-cGe"/>
                             <constraint firstItem="LpK-bh-0eg" firstAttribute="leading" secondItem="p1Z-fb-6Yd" secondAttribute="leading" id="MwW-o4-Tun"/>
+                            <constraint firstItem="LpK-bh-0eg" firstAttribute="top" secondItem="p1Z-fb-6Yd" secondAttribute="top" id="OJk-RQ-JJS"/>
                             <constraint firstItem="JQR-gb-VDU" firstAttribute="top" secondItem="dCE-Sj-bHb" secondAttribute="bottom" constant="78" id="RPH-aZ-nru"/>
                             <constraint firstItem="0gp-Qa-O4p" firstAttribute="top" secondItem="ty4-eA-OEE" secondAttribute="bottom" id="ZKW-KX-pBm"/>
                             <constraint firstItem="qql-CS-FXu" firstAttribute="leading" secondItem="p1Z-fb-6Yd" secondAttribute="leading" constant="18" id="bfn-ac-JPV"/>
-                            <constraint firstItem="qql-CS-FXu" firstAttribute="top" secondItem="LpK-bh-0eg" secondAttribute="bottom" constant="15" id="caA-RO-Yyz"/>
                             <constraint firstItem="5kB-Qi-Lry" firstAttribute="top" secondItem="GKT-Go-Z35" secondAttribute="bottom" constant="108" id="eQa-bK-WIU"/>
                             <constraint firstItem="dCE-Sj-bHb" firstAttribute="top" secondItem="LpK-bh-0eg" secondAttribute="bottom" constant="44" id="grp-R4-s8g"/>
                             <constraint firstItem="ty4-eA-OEE" firstAttribute="top" secondItem="JQR-gb-VDU" secondAttribute="bottom" constant="64" id="jZm-Mr-JwM"/>
                             <constraint firstItem="VEn-1C-2nV" firstAttribute="leading" secondItem="dCE-Sj-bHb" secondAttribute="trailing" constant="8" id="jmX-dq-mGu"/>
-                            <constraint firstItem="LpK-bh-0eg" firstAttribute="top" secondItem="p1Z-fb-6Yd" secondAttribute="top" id="lAe-4g-8cN"/>
                             <constraint firstItem="dCE-Sj-bHb" firstAttribute="leading" secondItem="p1Z-fb-6Yd" secondAttribute="leading" constant="20" id="ldU-SS-LU0"/>
                             <constraint firstItem="0gp-Qa-O4p" firstAttribute="trailing" secondItem="p1Z-fb-6Yd" secondAttribute="trailing" id="n6d-Tn-Qu3"/>
                             <constraint firstItem="0oL-a8-2cG" firstAttribute="top" secondItem="LpK-bh-0eg" secondAttribute="bottom" constant="4" id="oEv-Dh-9xI"/>
@@ -310,7 +309,6 @@
                             <constraint firstItem="ty4-eA-OEE" firstAttribute="leading" secondItem="p1Z-fb-6Yd" secondAttribute="leading" id="qUz-yL-BnC"/>
                             <constraint firstItem="LpK-bh-0eg" firstAttribute="top" secondItem="lpz-9I-62p" secondAttribute="top" id="rWJ-pf-18r"/>
                             <constraint firstItem="ty4-eA-OEE" firstAttribute="trailing" secondItem="p1Z-fb-6Yd" secondAttribute="trailing" id="sMP-JS-gjW"/>
-                            <constraint firstItem="LpK-bh-0eg" firstAttribute="top" secondItem="p1Z-fb-6Yd" secondAttribute="top" id="vJ6-nb-YdD"/>
                             <constraint firstItem="p1Z-fb-6Yd" firstAttribute="trailing" secondItem="qql-CS-FXu" secondAttribute="trailing" constant="141" id="vc6-ST-bSo"/>
                             <constraint firstItem="JQR-gb-VDU" firstAttribute="leading" secondItem="p1Z-fb-6Yd" secondAttribute="leading" constant="20" id="wNG-RP-cSk"/>
                             <constraint firstItem="GKT-Go-Z35" firstAttribute="top" secondItem="qql-CS-FXu" secondAttribute="bottom" constant="30" id="xsg-sI-Mii"/>
